@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "03.08.2012"
-#define TIME_STR "20:08:18"
-#define SUB_VERS 1032-Mike
-#define SVN_VERS "ersky9x-r97"
+#define DATE_STR "07.08.2012"
+#define TIME_STR "23:02:47"
+#define SUB_VERS 1036-Mike
+#define SVN_VERS "ersky9x-r98"
 #define MOD_VERS "REVB"
