@@ -10,6 +10,10 @@ description here
 ====================================================================================
 
 ******************************************
+CHANGELOG: 07-08-2012 MPB
+Add retries to reading the SD card SCR register
+
+******************************************
 CHANGELOG: 03-08-2012 MPB
 Add FAS100 Voltage
 Correct FAS100 current and mAh
